add route delete to method delete
