# api/routes.py
@@ -9,6 +9,6 @@ def create_route(api: Api):
     api.add_resource(RefreshToken,'/authentication/token/refresh')
 
     api.add_resource(FoodsApi, '/foods')
-    api.add_resource(FoodApi, '/foods/<name>')
+    api.add_resource(FoodApi, '/foods/delete/<name>')
 
     api.add_resource(BmrAPI,'/bmr')
